tests/ui/parser/keyword-typeof.rs
fn main() {
    let typeof = (); //~ ERROR expected identifier, found reserved keyword `typeof`
}

// ferrocene-annotations: fls_lish33a1naw5
// Keywords
//
// ferrocene-annotations: fls_cbsgp6k0qa82
// Reserved Keywords
